@@ -1,6 +1,10 @@
 # ChangeLog for sci-mathematics/maxima
-# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/maxima/ChangeLog,v 1.64 2009/04/19 22:03:35 grozin Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/maxima/ChangeLog,v 1.65 2009/05/30 06:46:38 ulm Exp $
+
+  30 May 2009; Ulrich Mueller <ulm@gentoo.org> maxima-5.14.0.ebuild,
+  maxima-5.17.1-r1.ebuild, maxima-5.18.1.ebuild:
+  Remove app-text/tetex from dependencies, bug 227443.
 
   20 Apr 2009; Andrey Grozin <grozin@gentoo.org> ChangeLog:
   Version bump
